<resources>
    <string name="app_name">LiveDemoPractice</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="custom_toast_message">Custom Toast Message</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="not_register_yet">Not register yet ?</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
</resources>